# ocsf-json-schema

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
ocsf_json_schema/: __init__.py  embedded.py  loader.py  schema.py
ocsf_json_schema/ocsf/: 1.2.0.json  README.md
ocsf_schema/: 1.0.0-rc.2.json  1.0.0-rc.3.json  1.0.0.json  1.1.0.json  1.3.0.json  1.4.0.json  README.md  pickle-it.py
src/ocsf_json_schema/: embedded.py  schema.py
src/ocsf_json_schema/ocsf/: 1.5.0.json  1.6.0.json  1.7.0.json  1.8.0.json  README.md
tests/: test_ocsf_json_schema.py  test_ocsf_json_schema_1.py  test_ocsf_json_schema_2.py  test_ocsf_json_schema_embedded.py  test_ocsf_json_schema_embedded_1.py  test_ocsf_json_schema_embedded_2.py  test_ocsf_json_schema_v2.py  test_with_jsonschema.py
